--- a/PART3/Windows/ResetRecipeWindow.xaml
+++ b/PART3/Windows/ResetRecipeWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="PART3.Windows.ResetRecipeWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Scale Recipe" Height="450" Width="400">
+        Title="Reset Recipe" Height="450" Width="400">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
